[package]
name = "async-uart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


futures = { version = "0.3", default-features = false }
uart8250 = { version = "0.5.0", features = ["fmt"], optional = true }
uart_xilinx = { version = "*", features = ["fmt"], optional = true }
embedded-hal = "=1.0.0-alpha.4"
heapless = "0.7.5"
spin = { version = "0.9", features = ["use_ticket_mutex"] }
nb = "1.0.0"

executor = { git = "https://github.com/rcore-os/executor" }
lrv-pac = { git = "https://github.com/muxinyu1/lrv-pac", optional = true }
qemu-pac = {git = "https://github.com/muxinyu1/qemu-pac", optional = true}

[features]
default = ["board_qemu"]
board_qemu = ["uart8250", "qemu-pac"]
board_lrv = ["uart_xilinx", "lrv-pac"]
trace = []